<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acquire_wake_lock">Acquire WakeLock</string>
    <string name="acquire_wake_lock_summary">Keep the CPU on</string>
    <string name="action_anytls">AnyTLS</string>
    <string name="action_download">DOWNLOAD</string>
    <string name="action_export">Export</string>
    <string name="action_export_clipboard">Export to Clipboard</string>
    <string name="action_export_err">Failed to export.</string>
    <string name="action_export_file">Export to file</string>
    <string name="action_export_msg">Successfully export!</string>
    <string name="action_http">HTTP</string>
    <string name="action_hysteria">Hysteria</string>
    <string name="action_import">Import from Clipboard</string>
    <string name="action_import_err">Failed to import.</string>
    <string name="action_import_file">Import from file</string>
    <string name="action_import_msg">Successfully import!</string>
    <string name="action_learn_more">LEARN MORE</string>
    <string name="action_mieru">Mieru</string>
    <string name="action_naive">Naïve</string>
    <string name="action_shadowsocks">Shadowsocks</string>
    <string name="action_shadowtls">ShadowTLS</string>
    <string name="action_socks">SOCKS</string>
    <string name="action_ssh">SSH</string>
    <string name="action_switch">Switch</string>
    <string name="action_trojan">Trojan</string>
    <string name="action_trojan_go">Trojan Go</string>
    <string name="action_tuic">TUIC</string>
    <string name="action_vmess">VMess</string>
    <string name="action_wireguard">WireGuard</string>
    <string name="add_profile">Add Profile</string>
    <string name="add_profile_methods_manual_settings">Manual Settings</string>
    <string name="add_profile_methods_scan_qr_code">Scan QR code</string>
    <string name="ads">Ads</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="allow_insecure">Allow Insecure</string>
    <string name="allow_insecure_on_request_sum">Disable certificate checking when updating subscriptions</string>
    <string name="allow_insecure_sum">Disable certificate checking. When enabled, this configuration is as secure as plaintext</string>
    <string name="alpn">Application-Layer Protocol Negotiation</string>
    <string name="alter_id">Alter ID</string>
    <string name="always_show_address">Always Show Address</string>
    <string name="always_show_address_sum">Always display the server address on the configuration card</string>
    <string name="androidx_camera_default_config_provider">androidx.camera.camera2.Camera2Config$DefaultProvider</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="app_name">NekoBox</string>
    <string name="app_name_long">NekoBox for Android</string>
    <string name="app_tls_version">Subscription Min TLS Version</string>
    <string name="app_version">Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="append_http_proxy">Append HTTP Proxy to VPN</string>
    <string name="append_http_proxy_sum">HTTP proxy will be used directly from (browser/ some supported apps), without going through the virtual NIC device (Android 10+)</string>
    <string name="apply">Apply</string>
    <string name="apps">Applications</string>
    <string name="apps_message">%d Applications</string>
    <string name="auto">Auto</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_connect_summary">Enable proxy on startup/app update if it was running before</string>
    <string name="auto_select_proxy_apps">Auto select proxy apps</string>
    <string name="auto_select_proxy_apps_message">Auto select proxy apps, this will clear your current selection.</string>
    <string name="auto_update">Auto Update</string>
    <string name="auto_update_delay">Auto Update Delay (In minutes)</string>
    <string name="available">%dms</string>
    <string name="backup">Backup</string>
    <string name="backup_groups_and_configurations">Groups and configurations</string>
    <string name="backup_import">Import</string>
    <string name="backup_import_summary">Importing will overwrite the existing data.</string>
    <string name="backup_importing">Importing…</string>
    <string name="backup_not_file">Not an backup file: excepted .json, but %s</string>
    <string name="backup_rules">Routing rules</string>
    <string name="backup_settings">Settings</string>
    <string name="backup_summary">If the routing settings are not backed up with configurations, then custom outbounds will be lost.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bypass_apps">Bypass</string>
    <string name="bypass_lan_in_core">Bypass LAN in Core</string>
    <string name="cag_dns">DNS Settings</string>
    <string name="cag_misc">Misc Settings</string>
    <string name="cag_route">Route Settings</string>
    <string name="cag_ws">WebSocket Settings</string>
    <string name="certificates">Certificates</string>
    <string name="chain_settings">Chain Settings</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="circular_reference">Circular reference</string>
    <string name="circular_reference_sum">The route cannot contain itself.</string>
    <string name="clear_logcat">Clear Logcat</string>
    <string name="clear_profiles">Clear</string>
    <string name="clear_profiles_message">Are you sure you want to clear this group?</string>
    <string name="clear_selections">Clear selections</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clear_traffic_statistics">Clear traffic statistics</string>
    <string name="cleartext_http_warning">Cleartext HTTP traffic is insecure</string>
    <string name="clipboard_empty">Clipboard is empty</string>
    <string name="cloudflare_wrap">Cloudflare Warp</string>
    <string name="config_settings">Config Settings</string>
    <string name="config_type">Config Type</string>
    <string name="confirm">Confirm</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %dms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %dms</string>
    <string name="connection_test_clear_results">Clear test results</string>
    <string name="connection_test_delete_unavailable">Clear unavailable</string>
    <string name="connection_test_domain_not_found">Domain not found</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="connection_test_icmp_ping_unavailable">ICMPing unavailable</string>
    <string name="connection_test_refused">Connection refused</string>
    <string name="connection_test_tcp_ping">TCPing</string>
    <string name="connection_test_tcp_ping_unavailable">TCPing unavailable</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_timeout">Timeout</string>
    <string name="connection_test_unreachable">Unreachable</string>
    <string name="connection_test_url">Connection Test URL</string>
    <string name="connection_test_url_test">URL Test</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="custom_config">Custom Config</string>
    <string name="custom_config_json">Custom config JSON</string>
    <string name="custom_outbound_json">Custom outbound JSON</string>
    <string name="deduplication">Deduplication</string>
    <string name="deduplication_sum">Remove duplicate configurations when updating</string>
    <string name="delete">Remove</string>
    <string name="delete_confirm_prompt">Are you sure you want to remove this profile?</string>
    <string name="delete_group_prompt">Are you sure you want to remove this group?</string>
    <string name="delete_route_prompt">Are you sure you want to remove this route?</string>
    <string name="direct_boot_aware">Allow Toggling in Lock Screen</string>
    <string name="direct_boot_aware_summary">Your selected profile information will be less protected</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="disable">Disable</string>
    <string name="dns_hosts">Domain rewrite</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with Direct DNS. Be aware of potential DNS leaks</string>
    <string name="document">Document</string>
    <string name="domain_strategy">Domain Resolution Strategy</string>
    <string name="domain_strategy_for_direct">Domain strategy for Direct</string>
    <string name="domain_strategy_for_remote">Domain strategy for Remote</string>
    <string name="domain_strategy_for_server">Domain strategy for Server address</string>
    <string name="donate">Donate</string>
    <string name="donate_info">I love money</string>
    <string name="download">Download</string>
    <string name="nat_result_hint">NAT check result</string>
    <string name="nat_stun_server_hint">Stun server</string>
    <string name="start">Start</string>
    <string name="stun_attest_loading">This may take a few minutes…</string>
    <string name="stun_test">NAT behaviour discovery</string>
    <string name="stun_test_summary">"Determine the client's NAT mapping behaviour and the NAT filtering behaviour defined in RFC 3478 using STUN."</string>
    <string name="warp_generate">Generate Configuration</string>
    <string name="warp_license">CloudFlare Warp is a free WireGuard VPN provider. By using it, you agree to the TOS.</string>
</resources>